add getme
